Working on CSRF-protection: configure protection against Cross site request forgery and protect login/logout

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -65,7 +65,8 @@
             >Create Post</a
           >
           <form action="/logout" method="POST" class="d-inline">
-            <button class="btn btn-sm btn-secondary">Sign Out</button>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <button class="btn btn-sm btn-secondary">Sign Out</button>>
           </form>
         </div>
 
@@ -90,6 +91,7 @@
               />
             </div>
             <div class="col-md-auto">
+              <input type="hidden" name="_csrf" value="<%= csrfToken %>">
               <button class="btn btn-primary btn-sm">Sign In</button>
             </div>
           </div>
