--- a/views/includes/profileShared.ejs
+++ b/views/includes/profileShared.ejs
@@ -7,6 +7,7 @@
     action="/removeFollow/<%= profileUsername %>"
     method="POST"
   >
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
     <button class="btn btn-danger btn-sm">
       Stop Following <i class="fas fa-user-times"></i>
     </button>
@@ -18,6 +19,7 @@
     action="/addFollow/<%= profileUsername %>"
     method="POST"
   >
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
     <button class="btn btn-primary btn-sm">
       Follow <i class="fas fa-user-plus"></i>
     </button>
